# imggen

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: basic_patterns.h  fxdpoint.h  hist_calc.h  imgen.h  imgfactory.h  imgio.h  imgmath.h
scripts/: clean.sh  show.py  show_hist.py  topng.sh
src/: CMakeLists.txt  basic_patterns.c  fxdpoint.c  hist_calc.c  imgen.c  imgfactory.c  imgio.c  imgmath.c  main.c  scratch.c
